# kawaiidra-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CONTRIBUTION_SUMMARY.md  INSTALLATION.md  LICENSE  README.md  ROADMAP.md  TEST_PLAN.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt  run_comprehensive_tests.py  run_server.py  start_server.bat
md/: README.md
md/analysis/: ge-cync-analysis.md  ge-cync-api-endpoints.md  ge-cync-device-types.md
src/ghidra_mcp/: __init__.py  config.py  server.py
src/ghidra_mcp/scripts/: DecompileFunction.py  FindFunctions.py  GetBinaryInfo.py  GetXrefs.py
src/kawaiidra_mcp/: __init__.py  cache.py  config.py  server.py
src/kawaiidra_mcp/bridge/: __init__.py  backend.py  gui_context.py  jpype_bridge.py
src/kawaiidra_mcp/scripts/: AnalyzeMachPorts.py  AnalyzeMachTraps.py  AnalyzeSandboxOps.py  CreateLabel.py  DecompileFunction.py  DeleteLabel.py  DetectEntitlementChecks.py  DetectKPPKTRR.py  DetectLibraries.py  DetectVulnerabilities.py  ExportAnalysis.py  FindFunctions.py  FindIOKitClasses.py  FindKernelSymbols.py  FindPACGadgets.py  FindSimilarFunctions.py  GenerateReport.py  GetAnnotatedDisassembly.py  GetCallGraph.py  GetControlFlowGraph.py  GetDataStructures.py  GetDisassembly.py  GetFunctionWithContext.py  GetMemoryMap.py  GetXrefs.py  GetXrefsFrom.py  GetXrefsTo.py  ListBookmarks.py  ListDataItems.py  ListExports.py  ListFunctions.py  ListImports.py  ListLabels.py  (+6 more)
tests/: __init__.py  conftest.py  test_bridge.py  test_cache.py  test_config.py  test_index_parsing.py  test_mcp_handlers.py  test_mcp_tools.py
