[project]
name = "kawaiidra-mcp"
version = "0.1.0"
description = "Kawaiidra MCP Server - Binary analysis via Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
